updatedd to 4 columns over 1550px

--- a/css/style.css
+++ b/css/style.css
@@ -211,6 +211,11 @@ section#work {
     padding-left: 10px;
     margin-bottom: -10px;
 }
+@media (min-width:1550px) {
+.column {
+    width: 25%;
+}
+}
 
 @media (max-width:1250px) and (min-width:992px) {
 .column {
