--- a/css/style.css
+++ b/css/style.css
@@ -75,9 +75,10 @@ a:hover {
 .btn {
   border: none;
   outline: none;
-  padding: 12px 16px;
+  padding: 6px 12px;
   background-color: white;
   cursor: pointer;
+    font-size: 16px!important;
 }
 .btn.active {
     color: #bd5d38;
@@ -97,6 +98,11 @@ section#work {
 @media (max-width:650px) {
 .column {
     width: 50%;
+}
+}
+@media (max-width:575px) {
+.tk-575 {
+    display: none;
 }
 }
 @media (max-width:425px) {
