--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+
+
 body {
   background-color: #f5f5f5;
   color: #4e4e4e;
@@ -921,9 +923,9 @@ section.resume-section {
   overflow: hidden;
 }
 
-.work-img img {
+/*.work-img img {
   transition: all 1s;
-}
+}*/
 
 .work-content {
   padding: 2rem 3% 1rem 4%;
