--- a/css/resume.css
+++ b/css/resume.css
@@ -71,7 +71,7 @@ p.lead {
 }
 
 .social-icons a:hover {
-  background-color: #BD5D38;
+  background-color: #F2784B;
 }
 
 .dev-icons {
@@ -79,7 +79,7 @@ p.lead {
 }
 
 .dev-icons .list-inline-item i:hover {
-  color: #BD5D38;
+  color: #F2784B;
 }
 
 #sideNav .navbar-nav .nav-item .nav-link {
@@ -163,11 +163,11 @@ section.resume-section .resume-item .resume-date {
 }
 
 .text-primary {
-  color: #BD5D38 !important;
+  color: #F2784B !important;
 }
 
 a {
-  color: #BD5D38;
+  color: #F2784B;
 }
 
 a:hover, a:focus, a:active {
