--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ a:hover {
     font-weight: 600!important;
 }
 .bg-primary {
-    background-color: #343a40!important;
+    background-color: #222222!important;
 }
 .work-content .w-like {
     font-size: 2rem!important;
